--- a/views/components/index.ejs
+++ b/views/components/index.ejs
@@ -11,55 +11,55 @@
 </head>
 <body>
     <%- include('../layouts/header')%>
-        <img src="https://img.gtsstatic.net/reno/imagereader.aspx?imageurl=https%3A%2F%2Fstatic-christiesrealestate-cms-production.gtsstatic.net%2Fresources%2Fv_4_19_0_324%2Fsiteresources%2Fmy%20folder%2Fresponsive%2Flifestyles%2Fbeach%2Fchelston10.jpg&option=N&permitphotoenlargement=false&w=1200&fallbackimageurl=https%3A%2F%2Fstatic-christiesrealestate-cms-production.gtsstatic.net%2Fresources%2Fv_4_19_0_324%2Flayouts%2Fcommon%2Fimages%2Fno-photo.jpg" alt="" class="img-header">
-    <div class="grid wide container">
-        <section class="intro row">
+        <img src="https://img.gtsstatic.net/reno/imagereader.aspx?imageurl=https%3A%2F%2Fstatic-christiesrealestate-cms-production.gtsstatic.net%2Fresources%2Fv_4_19_0_324%2Fsiteresources%2Fmy%20folder%2Fresponsive%2Flifestyles%2Fbeach%2Fchelston10.jpg&option=N&permitphotoenlargement=false&w=1200&fallbackimageurl=https%3A%2F%2Fstatic-christiesrealestate-cms-production.gtsstatic.net%2Fresources%2Fv_4_19_0_324%2Flayouts%2Fcommon%2Fimages%2Fno-photo.jpg" alt="" class="home__img-header">
+    <div class="grid wide home__container">
+        <section class="home__intro row">
             <div class="col l-6">
-                <img src="https://m.media-amazon.com/images/I/71uqnElo1+L.jpg" alt="" class="intro-img">
+                <img src="https://m.media-amazon.com/images/I/71uqnElo1+L.jpg" alt="" class="home__intro-img">
             </div>
             <div class="col l-6">
-                <div class="intro__group">
-                    <h2 class="intro-title">Giới thiệu</h2>
-                    <h3 class="intro-text">Bất động sản nghỉ dưỡng là mô hình bất động sản được xây dựng tại khu nghỉ dưỡng, khu du lịch, bao gồm biệt thự trên đồi, biệt thự biển, căn hộ khách sạn, mini hotel, shophouse…. sau đó bán lại cho những cá nhân, tổ chức có nhu cầu đầu tư. Bất động sản nghỉ dưỡng được xây dựng nên với mục đích phục vụ khách du lịch, cung cấp dịch vụ lưu trú, thương mại… mang đến những trải nghiệm thú vị và tiện ích hấp dẫn cho du khách.</h3>
-                    <div class="intro__secondary">
-                        <img src="https://cdn.homedsgn.com/wp-content/uploads/2013/06/Beach-House-17-0-800x529.jpg" alt="" class="intro__secondary-img">
+                <div class="home__intro__group">
+                    <h2 class="home__intro-title">Giới thiệu</h2>
+                    <h3 class="home__intro-text">Bất động sản nghỉ dưỡng là mô hình bất động sản được xây dựng tại khu nghỉ dưỡng, khu du lịch, bao gồm biệt thự trên đồi, biệt thự biển, căn hộ khách sạn, mini hotel, shophouse…. sau đó bán lại cho những cá nhân, tổ chức có nhu cầu đầu tư. Bất động sản nghỉ dưỡng được xây dựng nên với mục đích phục vụ khách du lịch, cung cấp dịch vụ lưu trú, thương mại… mang đến những trải nghiệm thú vị và tiện ích hấp dẫn cho du khách.</h3>
+                    <div class="home__intro__secondary">
+                        <img src="https://cdn.homedsgn.com/wp-content/uploads/2013/06/Beach-House-17-0-800x529.jpg" alt="" class="home__intro__secondary-img">
                     </div>
                 </div>
             </div>
         </section>
         <%- include('../layouts/search')%>
-        <section class="regions">
+        <section class="home__regions">
 
-            <div class="northern space">
-                <div class="region__heading">
-                    <h3 class="region__name">Miền Bắc</h3>
+            <div class="home__northern space">
+                <div class="home__region__heading">
+                    <h3 class="home__region__name">Miền Bắc</h3>
                 </div>
-                <div class="list-apartment">
+                <div class="home__list-apartment">
                     <div class="row">
                         <%for(let i = 0; i < listRegion1.length; i++) {%>
                         <div class="col l-3">
-                            <div class="apartment-item">
-                                <div class="apartment-image">
+                            <div class="home__apartment-item">
+                                <div class="home__apartment-image">
                                     <img src="<%=listRegion1[i].images[0].url%>" alt="">
                                 </div>
-                                <div class="info">
-                                    <div class="infor-header"><%=listRegion1[i].heading%></div>
-                                    <div class="infor-beach"><%=listRegion1[i].city%></div>
-                                    <div class="infor-font">
-                                        <i class="infor-icon fa-solid fa-house">
+                                <div class="home__info">
+                                    <div class="home__infor-header"><%=listRegion1[i].heading%></div>
+                                    <div class="home__infor-beach"><%=listRegion1[i].city%></div>
+                                    <div class="home__infor-font">
+                                        <i class="home__infor-icon fa-solid fa-house">
                                             <span>0M</span>
                                         </i>   
-                                         <i class="infor-icon fa-solid fa-bed">
+                                         <i class="home__infor-icon fa-solid fa-bed">
                                             <span>0</span>
                                          </i>
-                                         <i class="infor-icon fa-solid fa-bath">
+                                         <i class="home__infor-icon fa-solid fa-bath">
                                             <span>0</span>
                                          </i>
                                     </div>
-                                    <div class="infor-address">
+                                    <div class="home__infor-address">
                                         <i class="fa-solid fa-location-dot"></i>
                                         Quận - Phường - Thành Phố</div>
-                                    <a href="/detail/<%=listRegion1[i]._id%>" class="apartment-detail">Xem chi tiết</a>
+                                    <a href="/detail/<%=listRegion1[i]._id%>" class="home__apartment-detail">Xem chi tiết</a>
                                 </div>
                             </div>
                         </div>
@@ -67,62 +67,62 @@
                     </div>
                 </div>
             </div>
-            <div class="central space">
-                <div class="region__heading">
-                    <h3 class="region__name">Miền Trung</h3>
+            <div class="home__central space">
+                <div class="home__region__heading">
+                    <h3 class="home__region__name">Miền Trung</h3>
                 </div>
-                <div class="list-apartment">
+                <div class="home__list-apartment">
                     <div class="row">
                         <%for(let i = 0; i < listRegion2.length; i++) {%>
                         <div class="col l-3">
-                            <div class="apartment-item">
-                                <div class="apartment-image">
+                            <div class="home__apartment-item">
+                                <div class="home__apartment-image">
                                     <img src="<%=listRegion2[i].images[0].url%>" alt="">
                                 </div>
-                                <div class="info">
-                                    <div class="infor-header"><%=listRegion2[i].heading%></div>
-                                    <div class="infor-beach"><%=listRegion1[i].city%></div>
-                                    <div class="infor-font">
-                                        <i class="infor-icon fa-solid fa-house">
+                                <div class="home__info">
+                                    <div class="home__infor-header"><%=listRegion2[i].heading%></div>
+                                    <div class="home__infor-beach"><%=listRegion1[i].city%></div>
+                                    <div class="home__infor-font">
+                                        <i class="home__infor-icon fa-solid fa-house">
                                             <span>0M</span>
                                         </i>   
-                                         <i class="infor-icon fa-solid fa-bed">
+                                         <i class="home__infor-icon fa-solid fa-bed">
                                             <span>0</span>
                                          </i>
-                                         <i class="infor-icon fa-solid fa-bath">
+                                         <i class="home__infor-icon fa-solid fa-bath">
                                             <span>0</span>
                                          </i>
                                     </div>
-                                    <div class="infor-address">
+                                    <div class="home__infor-address">
                                         <i class="fa-solid fa-location-dot"></i>
                                         Quận - Phường - Thành Phố</div>
-                                    <a href="" class="apartment-detail">Xem chi tiết</a>
+                                    <a href="" class="home__apartment-detail">Xem chi tiết</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col l-3">
-                            <div class="apartment-item">
-                                <div class="apartment-image">
+                            <div class="home__apartment-item">
+                                <div class="home__apartment-image">
                                     <img src="https://media-e1.s3.amazonaws.com/brt/styles/large/s3/snippets/snip_6.png" alt="">
                                 </div>
-                                <div class="info">
-                                    <div class="infor-header">Tên khu nghỉ dưỡng</div>
-                                    <div class="infor-beach">Tên Bãi biển </div>
-                                    <div class="infor-font">
-                                        <i class="infor-icon fa-solid fa-house">
+                                <div class="home__info">
+                                    <div class="home__infor-header">Tên khu nghỉ dưỡng</div>
+                                    <div class="home__infor-beach">Tên Bãi biển </div>
+                                    <div class="home__infor-font">
+                                        <i class="home__infor-icon fa-solid fa-house">
                                             <span>0M</span>
                                         </i>   
-                                         <i class="infor-icon fa-solid fa-bed">
+                                         <i class="home__infor-icon fa-solid fa-bed">
                                             <span>0</span>
                                          </i>
-                                         <i class="infor-icon fa-solid fa-bath">
+                                         <i class="home__infor-icon fa-solid fa-bath">
                                             <span>0</span>
                                          </i>
                                     </div>
-                                    <div class="infor-address">
+                                    <div class="home__infor-address">
                                         <i class="fa-solid fa-location-dot"></i>
                                         Quận - Phường - Thành Phố</div>
-                                    <a href="" class="apartment-detail">Xem chi tiết</a>
+                                    <a href="" class="home__apartment-detail">Xem chi tiết</a>
                                 </div>
                             </div>
                         </div>
@@ -130,36 +130,36 @@
                     </div>
                 </div>
             </div>
-            <div class="southern space">
-                <div class="region__heading">
-                    <h3 class="region__name">Miền Nam</h3>
+            <div class="home__southern space">
+                <div class="home__region__heading">
+                    <h3 class="home__region__name">Miền Nam</h3>
                 </div>
-                <div class="list-apartment">
+                <div class="home__list-apartment">
                     <div class="row">
 
                         <div class="col l-3">
-                            <div class="apartment-item">
-                                <div class="apartment-image">
+                            <div class="home__apartment-item">
+                                <div class="home__apartment-image">
                                     <img src="https://media-e1.s3.amazonaws.com/brt/styles/large/s3/snippets/snip_6.png" alt="">
                                 </div>
-                                <div class="info">
-                                    <div class="infor-header">Tên khu nghỉ dưỡng</div>
-                                    <div class="infor-beach">Tên Bãi biển </div>
-                                    <div class="infor-font">
-                                        <i class="infor-icon fa-solid fa-house">
+                                <div class="home__info">
+                                    <div class="home__infor-header">Tên khu nghỉ dưỡng</div>
+                                    <div class="home__infor-beach">Tên Bãi biển </div>
+                                    <div class="home__infor-font">
+                                        <i class="home__infor-icon fa-solid fa-house">
                                             <span>0M</span>
                                         </i>   
-                                         <i class="infor-icon fa-solid fa-bed">
+                                         <i class="home__infor-icon fa-solid fa-bed">
                                             <span>0</span>
                                          </i>
-                                         <i class="infor-icon fa-solid fa-bath">
+                                         <i class="home__infor-icon fa-solid fa-bath">
                                             <span>0</span>
                                          </i>
                                     </div>
-                                    <div class="infor-address">
+                                    <div class="home__infor-address">
                                         <i class="fa-solid fa-location-dot"></i>
                                         Quận - Phường - Thành Phố</div>
-                                    <a href="" class="apartment-detail">Xem chi tiết</a>
+                                    <a href="" class="home__apartment-detail">Xem chi tiết</a>
                                 </div>
                             </div>
                         </div>
